--- a/pos_v1/SpecRunner.html
+++ b/pos_v1/SpecRunner.html
@@ -13,6 +13,10 @@
 
     <!-- include source files here... -->
     <script type="text/javascript" src="spec/fixtures.js"></script>
+    <script type="text/javascript" src="src/print_shopping_list.js"></script>
+    <script type="text/javascript" src="src/split_barcode.js"></script>
+    <script type="text/javascript" src="src/create_list.js"></script>
+    <script type="text/javascript" src="src/create_barcode.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
 
     <!-- include spec files here... -->
