--- a/pos_v2_3rdlib/SpecRunner.html
+++ b/pos_v2_3rdlib/SpecRunner.html
@@ -18,6 +18,10 @@
     <script type="text/javascript" src="src/model/promotion.js"></script>
 
     <script type="text/javascript" src="spec/fixtures.js"></script>
+    <script type="text/javascript" src="src/create_barcode.js"></script>
+    <script type="text/javascript" src="src/split_barcode.js"></script>
+    <script type="text/javascript" src="src/create_list.js"></script>
+    <script type="text/javascript" src="src/print_shopping_list.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
 
     <!-- include spec files here... -->
