--- a/pos_v2_3rdlib/SpecRunner.html
+++ b/pos_v2_3rdlib/SpecRunner.html
@@ -21,7 +21,9 @@
     <script type="text/javascript" src="src/create_barcode.js"></script>
     <script type="text/javascript" src="src/split_barcode.js"></script>
     <script type="text/javascript" src="src/create_list.js"></script>
+    <script type="text/javascript" src="src/turned_barcode_to_list.js"></script>
     <script type="text/javascript" src="src/print_shopping_list.js"></script>
+    <script type="text/javascript" src="src/turned_barcode_to_list.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
 
     <!-- include spec files here... -->
