重构pos_0及0.1,命名规范

--- a/pos_v0.1/SpecRunner.html
+++ b/pos_v0.1/SpecRunner.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>POS v1 Spec Runner</title>
 
+    <script type="text/javascript" src="http://underscorejs.org/underscore.js"></script>
     <link rel="shortcut icon" type="image/png" href="../lib/jasmine-2.0.1/jasmine_favicon.png">
     <link rel="stylesheet" type="text/css" href="../lib/jasmine-2.0.1/jasmine.css">
 
