--- a/pos_v2/SpecRunner.html
+++ b/pos_v2/SpecRunner.html
@@ -14,6 +14,7 @@
     <!-- include source files here... -->
     <script type="text/javascript" src="src/model/item.js"></script>
     <script type="text/javascript" src="src/model/promotion.js"></script>
+    <script type="text/javascript" src="../lib/moment-2.8.1/moment-with-locales.js"></script>
 
     <script type="text/javascript" src="spec/fixtures.js"></script>
     <script type="text/javascript" src="src/print_shopping_list.js"></script>
