--- a/pos_v2_3rdlib/SpecRunner.html
+++ b/pos_v2_3rdlib/SpecRunner.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="../lib/jasmine-2.0.1/jasmine.js"></script>
     <script type="text/javascript" src="../lib/jasmine-2.0.1/jasmine-html.js"></script>
     <script type="text/javascript" src="../lib/jasmine-2.0.1/boot.js"></script>
+    <script type="text/javascript" src="../lib/underscore.js"></script>
 
     <!-- include source files here... -->
     <script type="text/javascript" src="src/model/item.js"></script>
