--- a/pos_v1_3rdlib/SpecRunner.html
+++ b/pos_v1_3rdlib/SpecRunner.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="../lib/jasmine-2.0.1/boot.js"></script>
 
     <!-- include source files here... -->
+    <script type="text/javascript" src="../lib/underscore.js"></script>
     <script type="text/javascript" src="spec/fixtures.js"></script>
     <script type="text/javascript" src="src/print_shopping_list.js"></script>
     <script type="text/javascript" src="src/create_barcode.js"></script>
