--- a/pos_v2_3rdlib/SpecRunner.html
+++ b/pos_v2_3rdlib/SpecRunner.html
@@ -17,7 +17,7 @@
     <!-- include source files here... -->
     <script type="text/javascript" src="src/model/item.js"></script>
     <script type="text/javascript" src="src/model/promotion.js"></script>
-
+    <script type="text/javascript" src="../lib/underscore.js"></script>
     <script type="text/javascript" src="spec/fixtures.js"></script>
     <script type="text/javascript" src="src/turned_barcode_to_list.js"></script>
     <script type="text/javascript" src="src/print_shopping_list.js"></script>
