--- a/pos_v2/SpecRunner.html
+++ b/pos_v2/SpecRunner.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="../lib/moment-2.8.1/moment-with-locales.js"></script>
 
     <script type="text/javascript" src="spec/fixtures.js"></script>
+    <script type="text/javascript" src="../lib/underscore.js"></script>
     <script type="text/javascript" src="src/print_shopping_list.js"></script>
     <script type="text/javascript" src="src/turned_barcode_to_list.js"></script>
     <script type="text/javascript" src="src/main.js"></script>
